# binary_read

./: CMakeLists.txt  binary_arch.cc  binary_arch.hh  main.cc  state_machine.cc  state_machine.hh  workflow.cc
include/: binary_arch.hh  workflow.hh
src/: CMakeLists.txt  binary_arch.cc  main.cc  state_machine.cc
